--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -211,6 +211,7 @@ source_set("ui") {
     deps += [
       "//brave/components/brave_rewards/resources:tip_generated_resources",
       "//brave/components/brave_rewards/resources:ui_generated_resources",
+      "//brave/vendor/bat-native-ads",
     ]
   }
 }
