Chrome_elf has moved under chrome.
Chromium change:

commit 0196be28158379d023624ec3f27d2d2fe7a8daa3
Author: Patrick Monette <pmonette@chromium.org>
Date:   Fri May 10 03:33:15 2019 +0000

    Move //chrome_elf to //chrome/chrome_elf

    As chrome_elf.dll is basically a part of Chrome, it makes more sense to
    have this directory under //chrome.

--- a/app/win/BUILD.gn
+++ b/app/win/BUILD.gn
@@ -37,7 +37,7 @@ copy("dist_resources") {
   ]
 
   public_deps = [
-    "//chrome_elf",
+    "//chrome/chrome_elf",
     "//third_party/angle:copy_compiler_dll",
   ]
 }
