--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -153,7 +153,10 @@ source_set("browser_process") {
   }
 
   if (enable_tor) {
-    deps += [ "tor" ]
+    deps += [
+      "//brave/utility/tor",
+      "tor", 
+    ]
   }
 
   if (enable_extensions) {
@@ -162,7 +165,14 @@ source_set("browser_process") {
 
   if (brave_ads_enabled) {
     deps += [
+      "//brave/components/services/bat_ads:lib",
       "//components/dom_distiller/core",
+    ]
+  }
+
+  if (brave_rewards_enabled) {
+    deps += [
+      "//brave/components/services/bat_ledger:lib",
     ]
   }
 
