--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -25,8 +25,6 @@ source_set("ui") {
       "brave_browser_command_controller.h",
       "brave_browser_content_setting_bubble_model_delegate.cc",
       "brave_browser_content_setting_bubble_model_delegate.h",
-      "brave_dark_mode_observer.cc",
-      "brave_dark_mode_observer.h",
       "brave_layout_constants.cc",
       "brave_layout_constants.h",
       "brave_pages.cc",
@@ -133,6 +131,7 @@ source_set("ui") {
     "//brave/browser/devtools",
     "//brave/browser/tor",
     "//brave/browser/resources/settings:resources",
+    "//brave/ui/native_theme",
     "//chrome/app:command_ids",
     "//chrome/common",
     "//components/prefs",
