Fixes brave/brave-browser#4581 - Adds wallet entry to settings bar when is_official_build=false

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -1,8 +1,12 @@
 import("//tools/grit/grit_rule.gni")
 import("//ui/webui/webui_features.gni")
+import("//build/config/features.gni")
 
 grit("resources") {
-  defines = [ "optimize_webui=$optimize_webui" ]
+  defines = [
+    "optimize_webui=$optimize_webui",
+    "is_official_build=$is_official_build"
+  ]
   source = "brave_webui_resources.grd"
 
   # The .grd contains references to generated files.
