Removed patching of third_party/blink/public/BUILD.gn
Used to patch third_party/blink/public/BUILD.gn with an extra source
(brave/third_party/blink/public/platform/brave_drm.mojom) but
the source has nothing to do with the target being patched and the
target has also been moved to a different location.

Moved brave_drm.mojom under brave/components/brave_drm. Added a new
BUILD.gn in there as well that includes brave_drm.mojom in the sources.
Added this BUILD.gn as a public dep to a new BUILD.gn in
brave/third_party/blink/renderer that is added as a public dep to
third_party/blink/renderer/modules.

Updated code relying on brave_drm.mojom with the new namespace.

Chromium change:

commit 4f1b5aa7c63061dd1a80aebe05b8ef36d70ecb4a
Author: Julie Jeongeun Kim <jkim@igalia.com>
Date:   Wed May 8 01:32:09 2019 +0000

    Reland "Reland "OnionSoup: Move web_bluetooth.mojom to public/mojom/bluetooth""

    This is a reland of 12b303006bbd944b37ea0010904e3de88ed1bd77

    It adds mojom_platform to 'interfaces' from //content/public/common/BUILD.gn
    to fix compilation error from mac_rel.

    Original change's description:
    > Reland "OnionSoup: Move web_bluetooth.mojom to public/mojom/bluetooth"
    >
    > This is a reland of d5b00821af44d875d6cad42ae578b999ddf9316c
    >
    > It updates //BUILD.gn and //content/public/common/BUILD.gn
    > in addition to the previous change to fix the dependency
    > problem.
    >
    > Original change's description:
    > > OnionSoup: Move web_bluetooth.mojom to public/mojom/bluetooth
    > >
    > > This CL moves bluetooth folder from public/platform/modules to
    > > public/mojom/ to gather mojom files to mojom folder with
    > > creating web_bluetooth_mojo_bindings.
    > >
    > > Bug: 919393
    > > Change-Id: I42037e1c9738b03969e927dd00f6b24c2873b364
    > > Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1530369
    > > Reviewed-by: Kentaro Hara <haraken@chromium.org>
    > > Reviewed-by: Kinuko Yasuda

--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -106,6 +106,7 @@ source_set("browser_process") {
     "//brave/common",
     "//brave/components/brave_ads/browser",
     "//brave/components/brave_component_updater/browser",
+    "//brave/components/brave_drm",
     "//brave/components/brave_referrals/browser",
     "//brave/components/brave_rewards/browser",
     "//brave/components/brave_shields/browser:brave_shields",
