--- a/BUILD.gn
+++ b/BUILD.gn
@@ -28,6 +28,7 @@ if (!is_ios) {
     deps = [
       "//brave/renderer",
       "//brave/utility",
+      "//brave/utility:importer_dependencies",
       "common"
     ]
   }
