browser_tests_runner needed a new dep.
Now also needs to depend on //chrome/installer/util:strings on windows.

Chromium change:

commit bc762634072f9a93f6c5a1d68e5b7aa74af803fc
Author: danakj <danakj@chromium.org>
Date:   Fri May 24 17:19:35 2019 +0000

    Remove is_android branch from the browser_tests target.

    We will add an android_browsertests target instead that is for Android
    only. This is a minimal change because it touches a lot of lines for
    re-indentation which is likely to cause rebase conflicts until the end
    of time.

    The browser_tests, browser_tests_runner, and performance_browser_tests
    targets are all wrapped in if (!is_android) {} instead.

    R=jam@chromium.org

    Bug: 961849

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -314,6 +314,10 @@ static_library("browser_tests_runner") {
     ":browser_test_support",
   ]
 
+  if (is_win) {
+    deps += [ "//chrome/installer/util:strings" ]
+  }
+
   sources = [
     "base/browser_tests_main.cc",
   ]
