--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -109,6 +109,10 @@ source_set("brave_cookie_blocking") {
     "brave_cookie_blocking.cc",
     "brave_cookie_blocking.h",
   ]
+
+  deps = [
+    "//base:logging_buildflags",
+  ]
 }
 
 source_set("shield_exceptions") {
