common:channel_info needed a new dep.

--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -8,6 +8,10 @@ source_set("channel_info") {
       "brave_channel_info_posix.h",
     ]
 
+    deps = [
+      "//base:logging_buildflags",
+    ]
+
     configs += [
       "//brave/build/linux:linux_channel_names",
     ]
